# MLOS

./: .bumpversion.cfg  .cspell.json  .dockerignore  .editorconfig  .git-blame-ignore-revs  .gitattributes  .gitignore  .gitmodules  .pre-commit-config.yaml  .prettierrc  .pylintrc  CMakeLists.txt  CODEOWNERS  CONTRIBUTING.md  Dockerfile  GitVersion.yml  MAINTAINING.md  Makefile  NOTICE  NuGet.Config  README.md  SECURITY.md  azure-pipelines.yml  azure-redis-1shot.jsonc  build.cake  build.linux.sh  conftest.py  dashboard.py  dirs.proj  environment.yml  genindex.html  index.html  mlos.code-workspace  mlos_bench.run.usage.html  nuget.config  objects.inv  py-modindex.html  pyproject.toml  pytest.ini  pytest_configure.py  (+7 more)
mlos_viz/: MANIFEST.in  README.md  _version.py  backend.py  frontend.py  pyproject.toml  setup.py
mlos_viz/mlos_viz/: __init__.py  base.py  dabl.py  util.py  version.py
source/: .pylintrc  CMakeLists.txt  Makefile  Mlos.NetCore.sln  dirs.proj
source/Examples/: CMakeLists.txt  Makefile  README.md  dirs.proj
source/Mlos.Agent/: CMakeLists.txt  ExperimentSessionManager.cs  MainAgent.cs  Mlos.Agent.csproj
source/Mlos.Agent.GrpcClient/: CMakeLists.txt  MainApp.cs  Mlos.Agent.GrpcClient.csproj  Mlos.Agent.GrpcClient.sln
source/Mlos.Agent.GrpcServer/: CMakeLists.txt  ExperimentManagerService.cs  GreeterService.cs  Mlos.Agent.GrpcServer.csproj  Startup.cs
source/Mlos.Agent.Proto/: ExperimentManagerService.proto  greet.proto
source/Mlos.Agent.Server/: CMakeLists.txt  CliOptionsParser.cs  Mlos.Agent.Server.csproj  Mlos.Agent.Server.sln  Mlos.Agent.Server.sln.DotSettings  MlosAgentServer.cs  README.md  TargetProcessManager.cs
source/Mlos.Core/: AlignedInstance.h  AlignedVector.h  AnonymousMemoryMlosContext.Linux.cpp  AnonymousMemoryMlosContext.Linux.h  ArenaAllocator.cpp  ArenaAllocator.h  BytePtr.h  CMakeLists.txt  ComponentConfig.h  ComponentConfig.inl  DllMain.cpp  FNVHashFunction.h  FileDescriptorExchange.Linux.cpp  FileDescriptorExchange.Linux.h  FileWatchEvent.Linux.cpp  FileWatchEvent.Linux.h  GlobalMemoryRegion.cpp  GlobalMemoryRegion.h  Hash.h  InterProcessMlosContext.cpp  InterProcessMlosContext.h  InternalMlosContext.cpp  InternalMlosContext.h  Makefile  Mlos.Core.cpp  Mlos.Core.h  Mlos.Core.inl  Mlos.Core.vcxproj  Mlos.Core.vcxproj.filters  MlosContext.cpp  MlosContext.h  MlosContext.inl  MlosInitializer.h  MlosInitializer.inl  MlosPlatform.Linux.inl  MlosPlatform.Std.inl  MlosPlatform.Windows.inl  MlosPlatform.h  NamedEvent.Linux.cpp  NamedEvent.Linux.h  (+40 more)
source/Mlos.Grpc.Binplace/: Mlos.Grpc.Binplace.csproj
source/Mlos.Model.Services/: CMakeLists.txt  Mlos.Model.Services.csproj  OptimizationObjective.cs  OptimizationProblem.cs
source/Mlos.Model.Services.Client/: CMakeLists.txt  Mlos.Model.Services.Client.csproj  OptimizationObjective.cs  OptimizationObjectiveExtension.cs  OptimizationProblem.cs  OptimizationProblemExtension.cs  OptimizerServiceEncoderDecoder.cs
source/Mlos.Model.Services.UnitTests/: Makefile  Mlos.Model.Services.UnitTests.csproj  UnitTests.cs
source/Mlos.NetCore/: AnonymousMemoryMlosContext.Linux.cs  ArrayExtensions.cs  CMakeLists.txt  CodegenProxyExtensions.cs  CodegenTypeExtensions.cs  ComponentConfig.cs  DeserializeEntry.cs  DispatchEntry.cs  ExperimentSession.cs  FileDescriptorExchangeServer.Linux.cs  IOptimizationProblem.cs  IOptimizerFactory.cs  IOptimizerProxy.cs  ISharedConfigAccessor.cs  ISimpleBayesianOptimizerFactory.cs  ISimpleBayesianOptimizerProxy.cs  IntPtrExtensions.cs  InterProcessMlosContext.cs  Mlos.NetCore.csproj  MlosContext.cs  NamedEvent.Windows.cs  NamedEvent.cs  NamedSemaphore.Linux.cs  Native.Linux.cs  Native.Windows.cs  PropertyProxyArray.cs  ProxyArray.cs  Security.Windows.cs  SettingsAssemblyManager.cs  SharedChannel.cs  SharedChannelPolicies.cs  SharedConfig.cs  SharedConfigDictionaryLookup.cs  SharedConfigManager.cs  SharedMemoryMapView.Linux.cs  SharedMemoryMapView.Windows.cs  SharedMemoryMapView.cs  SharedMemoryRegionView.cs  SocketExtension.Linux.cs  Utils.cs
source/Mlos.NetCore.Benchmark/: HashFunctionBenchmarks.cs  Mlos.NetCore.Benchmark.csproj  SharedChannelBenchmarks.cs  StreamingBenchmarks.cs  main.cs
source/Mlos.NetCore.Components.Package/: Mlos.NetCore.Components.Package.csproj
source/Mlos.NetCore.Components.Packages/: CMakeLists.txt  Makefile  Mlos.NetCore.Components.Packages.proj
source/Mlos.NetCore.UnitTest/: CMakeLists.txt  CodegenTests.cs  CodegenTypeTests.cs  DummyTests.cs  HashFunctionTests.cs  HashTableTests.cs  Makefile  Mlos.NetCore.UnitTest.csproj  Mlos.NetCore.UnitTest.sln  SemaphoreTests.Linux.cs  SettingsAssemblyInitializer.cs  SharedChannelTests.cs  SharedConfigManagerTests.cs  SharedMemoryMapViewTests.cs  StreamingTests.cs
source/Mlos.Notebooks/: BayesianOptimization-Context.ipynb  BayesianOptimization.ipynb  BayesianOptimization2.ipynb  Comparing Multi-Objective Optimization Strategies on Polynomials-v2.ipynb  Comparing Multi-Objective Optimization Strategies on Polynomials-v3.ipynb  Comparing Multi-Objective Optimization Strategies on Polynomials.ipynb  Comparing Multi-Objective Optimization Strategies.ipynb  ComparingWelchSatterthwaiteToHutterRandomForestVarianceEstimates.ipynb  ComputingPareto.ipynb  ComputingPareto2.ipynb  ComputingPareto3D.ipynb  Hypergrids.ipynb  MultiSeriesConvergenceDemo.ipynb  OptimizerEvaluationTools.ipynb  OptimizerMonitor.ipynb  RandomNearIncumbentDemo.ipynb  SampleInteractive.ipynb  SeriesConvergenceDemo.ipynb  SmartCache.ipynb  SmartCacheActiveLearning.ipynb  SmartCacheCPP.ipynb  SmartCacheCPPDocker.ipynb  SmartCacheOptimization.ipynb  Tomograph.ipynb  Untitled.ipynb  environment.yml  run_optimization.py  utils.py
source/Mlos.Proto/: GeneratePythonGrpcCode.cmd  GeneratePythonGrpcCode.sh  MlosCommonMessageTypes.proto  OptimizerMonitoringService.proto  OptimizerService.proto  OptimizerShared.proto
source/Mlos.Python/: .gitignore  OptimizerEvaluationTools.ipynb  OptimizerService_pb2.py  OptimizerService_pb2_grpc.py  requirements.txt  setup.py
source/Mlos.SettingsSystem.Attributes/: AssemblyExtensionMethods.cs  AssemblyInfo.cs  (+5 more)
(+2259 files in other folders)
